src/routes/Dashboard/Forms/FormBuilder/components/ElementsListPanel/ElementsListPanel.scss
@import './mixins';
@import './variables';

.elementsListView {
  height: 100%;
  margin-left: 3px;
}
.elementsListViewInner {
  overflow: auto;
  background-color: $panel-heading-bg-color;
  @include border-radius(4px);
  border: 1px solid $panel-border-color;
  @include box-shadow-custom(0px 3px 3px 0px rgba(25,58,79,0.2));
}
.panelRow {
  margin-left: -5px;
  margin-right: -5px;
}
.panelCol {
  padding: 0 5px 10px;
}

.panelWrapper {
  overflow: hidden;
  &:first-child {
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
  }
  &:last-child {
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
  }
}
.panelHeader {
  padding: 15px;
  display: block;
  cursor: pointer;
  position: relative;
  text-decoration: none !important;
  font-weight: 800;
  font-size: 14px;
  color: $darkblue;
  background-color: $panel-body-bg-color;
  border-bottom: 1px solid $panel-border-color;
  &:hover {
    background-color: darken($panel-body-bg-color, 2%);
  }
  &.expanded {
    .headerArrow svg {
      transform: rotate(180deg);
    }
  }
}

.panel {
  background-color: $panel-heading-bg-color;
  margin: 0 !important;
  border: none !important;
  @include border-radius(0);
}

.headerArrow {
  @include vcenter;
  right: 15px;
  svg {
    @include transition(all .2s);
  }
}

.inputType {
  font-family: 'Open Sans';
  font-size: 12px;
}

.svgWrapper {
  svg[name='Dropdown'] {
    margin-top: -3px;
  }
  svg[name='Legal'] {
    margin-top: -3px;
  }
  svg[name='Paragraph'] {
    margin-top: -4px;
  }
}

